<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mapcha</string>
    <string name="hello_world">Hello world!</string>
    <string name="SearchScreenGoButton">Go to game</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map_display">Map Display</string>
    <string name="CreateNewLocation">CreateNewLocationTest</string>
    <string name="CreateNewGameTest">TestCreateNewGame</string>

    <string name="wrong_answer">Wrong answer,try again</string>

    <!-- Descriptors -->
    <string name="chest_icon">Chest Icon</string>
    <string name="leader_icon">Leaderboard Icon</string>
    <string name="chest_description">Chest description</string>
    <string name="quiz_text_lbl">Quiz text label</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="parse_data_failed">Failed to pull data from server</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_dwelled">Dwelled</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="NotificationTest">NotificationTest</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fill_answer_here">Fill answer here</string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n Quisque vestibulum id justo sit amet porta. Nulla scelerisque pretium neque.\n Mauris augue ante, laoreet quis pulvinar ut, egestas sit amet nibh.</string>
    <string name="send_string">Send</string>
    <string name="placeholder_placeholder_string">Placeholder</string>
    <string name="GetByIdTest">GetBYIDTest</string>


    <!-- login and signup shit -->
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>

    <string name="login">Log in</string>
    <string name="signup">Sign up</string>

    <string name="title_activity_question_answer_popup">QuestionAnswerPopup</string>
    <string name="TestCount">TestCount</string>
    <string name="total_chests">Total Chests : </string>
    <string name="my_chases">My Chases</string>
    <string name="log_in_resource">LOG IN</string>
    <string name="sign_up_string">SIGN UP</string>
    <string name="chase_em_string">Chase\'m!</string>
    <string name="enter_a_chase_name_string">Enter a chase name</string>
</resources>
