<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapDisplay"
    android:background="@drawable/chest_win"
    >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:layout_gravity="top"
                android:background="@android:color/black">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/chest_icon"
                    android:src="@drawable/chest_icon"
                    android:layout_gravity="left|center"
                    android:layout_margin="5dp"
                    android:minHeight="45dp"
                    android:minWidth="45dp" />

                <TextView
                    android:id="@+id/chest_description_lbl"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:contentDescription="@string/chest_description"
                    android:text="@string/placeholder_placeholder_string"
                    android:layout_weight="4"
                    android:textColor="#ffffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/quizTextLbl"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/quiz_text_lbl"
                    android:layout_weight="1"
                    android:text="@string/placeholder_lorem_ipsum"/>

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="215dp"
                    android:gravity="center"
                    android:contentDescription="@string/leader_icon"
                    android:src="@drawable/leaderboard_icon" />

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="137dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fill_answer_here"
                android:id="@+id/answerTxtView"
                android:layout_gravity="center_horizontal"
                android:background="#ffffffff"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_string"
                android:id="@+id/sendBtn"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="clickSendButton"/>
        </LinearLayout>



</FrameLayout>
